<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_item_add" android:title="@string/host_add" android:icon="@android:drawable/ic_menu_add" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/menu_item_merge" android:title="@string/menu_item_merge" android:icon="@android:drawable/ic_dialog_alert"></item>
    <item android:id="@+id/menu_item_disable" android:title="@string/menu_item_disable" android:icon="@android:drawable/ic_dialog_alert"></item>
    <item android:id="@+id/menu_item_empty" android:title="@string/menu_item_empty" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
    <item android:id="@+id/menu_item_update" android:title="@string/menu_item_update" android:icon="@android:drawable/ic_menu_upload"></item>
    <item android:id="@+id/menu_item_setip" android:title="@string/menu_dns_setip" android:icon="@android:drawable/ic_menu_agenda"></item>
</menu>
